--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "short-link",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "short-link",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^1.0.16",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^5.8.1",
+        "@types/bcrypt": "^5.0.2",
+        "bcrypt": "^5.1.1",
+        "next": "14.1.0",
+        "next-auth": "^4.24.5",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "postcss": "^8",
+        "prisma": "^5.8.1",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
