--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
         "@next-auth/prisma-adapter": "^1.0.7",
         "@prisma/client": "^5.8.1",
         "@types/bcrypt": "^5.0.2",
+        "axios": "^1.6.5",
         "bcrypt": "^5.1.1",
         "next": "14.1.0",
         "next-auth": "^4.24.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-hook-form": "^7.49.3"
     },
     "devDependencies": {
         "@types/node": "^20",
