--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: Call endpoint to keep the database alive
         run: |
-          curl --request PUT \
+          curl --request GET \
             --url '${{ secrets.SITE_URL }}/api/keep-alive'
