--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: Call endpoint to keep the database alive
         run: |
-          response=$(curl --request GET --url '${{ secrets.SITE_URL }}/api/keep-alive')
+          response=$(curl --request GET --url '${{ secrets.SITE_URL }}/api/keep-alive --location')
           echo "Response: $response"
