--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -1,12 +1,12 @@
 name: Keep alive cron job
 on:
   schedule:
-    - cron: '*/6 * * * *' # daily https://crontab.guru/#*/6_*_*_*_*
+    - cron: '*/5 * * * *' # daily https://crontab.guru/#*/6_*_*_*_*
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
       - name: Call endpoint to keep the database alive
         run: |
-          response=$(curl --request GET --url '${{ secrets.SITE_URL }}/api/keep-alive --location')
+          response=$(curl --request GET --url '${{ secrets.SITE_URL }}/api/keep-alive' --location)
           echo "Response: $response"
